--- a/application/admin/view/brand/lst.html
+++ b/application/admin/view/brand/lst.html
@@ -29,27 +29,27 @@
                         <li><a href="{:url('admin/brand/lst',array('initial'=>'C'))}">C</a></li>
                         <li><a href="{:url('admin/brand/lst',array('initial'=>'D'))}">D</a></li>
                         <li><a href="{:url('admin/brand/lst',array('initial'=>'E'))}">E</a></li>
-                        <li><a href="#">F</a></li>
-                        <li><a href="#">G</a></li>
-                        <li><a href="#">H</a></li>
-                        <li><a href="#">I</a></li>
-                        <li><a href="#">J</a></li>
-                        <li><a href="#">K</a></li>
-                        <li><a href="#">L</a></li>
-                        <li><a href="#">M</a></li>
-                        <li><a href="#">N</a></li>
-                        <li><a href="#">O</a></li>
-                        <li><a href="#">P</a></li>
-                        <li><a href="#">Q</a></li>
-                        <li><a href="#">R</a></li>
-                        <li><a href="#">S</a></li>
-                        <li><a href="#">T</a></li>
-                        <li><a href="#">U</a></li>
-                        <li><a href="#">V</a></li>
-                        <li><a href="#">W</a></li>
-                        <li><a href="#">X</a></li>
-                        <li><a href="#">Y</a></li>
-                        <li><a href="#">Z</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'F'))}">F</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'G'))}">G</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'H'))}">H</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'I'))}">I</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'J'))}">J</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'K'))}">K</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'L'))}">L</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'M'))}">M</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'N'))}">N</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'O'))}">O</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'P'))}">P</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'Q'))}">Q</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'R'))}">R</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'S'))}">S</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'T'))}">T</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'U'))}">U</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'V'))}">V</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'W'))}">W</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'X'))}">X</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'Y'))}">Y</a></li>
+                        <li><a href="{:url('admin/brand/lst',array('initial'=>'Z'))}">Z</a></li>
                     </ul>
                 </div>
             </div>
