--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -7,7 +7,7 @@
     <title>{block name="title"}{/block}</title>
     {block name="css"}{include file="public/css"}{/block}
 </head>
-<body class="fixed-sidebar full-height-layout gray-bg" style="overflow-y:hidden">
+<body class="fixed-sidebar full-height-layout gray-bg">
     <div id="wrapper">
         {block name="left"}{include file="public/left"}{/block}
         <div id="page-wrapper" class="gray-bg dashbard-1">
