--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -35,7 +35,7 @@
                         <a class="J_menuItem" href="{:url('admin/brand/lst')}">品牌管理</a>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="graph_flot.html">Flot</a>
+                        <a class="J_menuItem" href="{:url('admin/carmodel/lst')}">车型管理</a>
                     </li>
                     <li>
                         <a class="J_menuItem" href="graph_morris.html">Morris.js</a>
